apps/releases/03-core/raw/yfinance-wrapper/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: yfinance-wrapper
spec:
  selector:
    app: yfinance-wrapper
  ports:
  - protocol: "TCP"
    port: 8090
    targetPort: 8000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yfinance-wrapper
spec:
  selector:
    matchLabels:
      app: yfinance-wrapper
  replicas: 1
  template:
    metadata:
      labels:
        app: yfinance-wrapper
    spec:
      containers:
      - name: yfinance-wrapper
        image: registry.lucas.engineering/yfinance_wrapper:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yfinance-wrapper
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: yfinance-v2.lucas.engineering
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yfinance-wrapper
            port:
              number: 8090
  tls:
  - hosts:
    - yfinance-v2.lucas.engineering
    secretName: yfinance-lucas-engineering-tls
